# Tunevault

./: .cache  README.md  render.yaml  vercel.json
backend/: .cache  .env  build.sh  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt  vercel.json
backend/backend/: settings.py  urls.py
backend/spotify/: credentials.py  util.py  views.py
backend/spotify/migrations/: 0001_initial.py
backend/tunevault/: .env  admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/tunevault/features/: tune.feature
backend/tunevault/features/steps/: tune.py
backend/tunevault/migrations/: 0001_initial.py  0002_profile_followers_vault_description_vault_followers_and_more.py  0003_vault_type_alter_profile_profileimg.py  0003_vault_vtype_alter_profile_profileimg.py  0004_vault_authors_vault_external_url_alter_vault_type.py  0005_merge_20231125_1823.py
backend/tunevault/static/: basicsSections.css  commentBox.css  custom.css  globals.css  home.css  login.css  members.css  miniPreviewVault.css  navBar.css  pagination.css  post.css  previewProfile.css  previewVault.css  searchResults.css  settings.css  vault.css
backend/tunevault/templates/: NavBar.html  commentBox.html  createAccount.html  home.html  login.html  members.html  miniPreviewVault.html  music.html  pagination.html  podcasts.html  post.html  previewProfile.html  previewVault.html  profile.html  searchMembers.html  searchMusic.html  searchPodcasts.html  searchResult.html  settingsProfile.html  vault.html
features/: environment.py  tunevault.feature  web.feature
(+44 files in other folders)
