[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["UrielArias <urielarias.a12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.17"
gunicorn = "^22.0.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
